--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.1",
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.9",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
